# Sozo-Protocol-Generator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  _append_cond2.py  _append_cond3.py  _append_cond4.py  _append_cond5.py  _append_cond6.py  _append_conditions.py  alembic.ini  app.py  create_gold_standard_templates.py  docker-compose.yml  fix_stroke_partners.py  fly.toml  generate_all.py  generate_fellow_protocols.py  generate_phenotype_partners_batch1.py  generate_phenotype_partners_batch2.py  generate_phenotype_partners_batch3.py  generate_phenotype_partners_batch4.py  generate_phenotype_partners_batch5.py  generate_phenotype_partners_batch6.py  generate_phenotype_partners_batch7.py  generate_prs_baseline_partners_batch1.py  generate_prs_baseline_partners_batch2.py  generate_window_conditions.py  package-lock.json  package.json  partners_analysis.txt  partners_tables.txt  pyproject.toml  pytest.ini  requirements.txt  sozo_dev.db
.streamlit/: config.toml
alembic/: env.py
configs/: app.yaml  branding.yaml  devices.yaml  evidence_rules.yaml  fnon_networks.yaml  modalities.yaml  review_thresholds.yaml
docs/: CANONICAL_GENERATION.md  CONTENT_ENRICHMENT.md  KNOWLEDGE_SYSTEM.md  LEGACY_RETIREMENT.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  OVERRIDE_PROMOTION.md  REVIEW_REGENERATION.md  TEMPLATE_DRIVEN_GENERATION.md  architecture.md  batch_generation.md  condition_onboarding.md  deployment.md  evidence_lifecycle.md  evidence_policy.md  phase8_evidence_ingestion.md  qa_lifecycle.md  review_workflow.md  reviewer_workflow.md  safety_evidence_policy.md
examples/: example_cli_commands.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
handbooks/: base_generator.py  cdata_1.py  cdata_2.py  cdata_3.py  run_handbooks.py
handbooks_partners/: base_generator.py  cdata_1.py  cdata_2.py  cdata_3.py  run_handbooks.py
legacy/: README.md
scripts/: _append_11_12.py  _append_13_14.py  _append_5_7.py  _append_8_10.py  _append_anxiety.py  _append_partners_data.py  _cond_10to14.py  _cond_5to9.py  _gen_assessment_references.py  _gen_brain_networks_reference.py  _gen_fnon_references.py  eeg_map.py  (+37 more)
(+1102 files in other folders)
