[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sozo-generator"
version = "1.0.0"
description = "SOZO Brain Center — Clinical Document Generation Platform"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.2.0,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "typer>=0.9,<1",
    "httpx>=0.24,<1",
    "requests>=2.31,<3",
    "biopython>=1.81,<2",
    "jinja2>=3.1,<4",
    "pyyaml>=6.0,<7",
    "pandas>=2.0,<3",
    "matplotlib>=3.7,<4",
    "pillow>=10.0,<12",
    "lxml>=4.9,<6",
    "beautifulsoup4>=4.12,<5",
    "svgwrite>=1.4,<2",
    "streamlit>=1.35,<2",
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<6",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    # Auth
    "PyJWT>=2.8,<3",
    "passlib[bcrypt]>=1.7,<2",
    # Background jobs
    "celery>=5.3,<6",
    "redis>=5.0,<6",
    # API
    "fastapi>=0.111,<1",
    "uvicorn>=0.29,<1",
    # LangGraph (protocol generation pipeline + API graph routes)
    "langgraph>=0.2,<1",
    "langgraph-checkpoint-sqlite>=2.0,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sozo = "sozo_generator.cli.main:app"
autoagent-clinical = "autoagent_clinical.cli:app"
